--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.4.8",
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
